<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--I used LinearLayout, orientation vertical, to align all children in a single direction, vertically-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_icon_white_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_16sp"
            android:layout_marginTop="@dimen/margin_16sp"
            android:layout_marginEnd="@dimen/margin_16sp"
            android:contentDescription="@string/app_icon_image_white"
            android:src="@drawable/shoe_app_icon_white" />

        <TextView
            android:id="@+id/sloganTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_16sp"
            android:layout_marginTop="@dimen/margin_36sp"
            android:layout_marginEnd="@dimen/margin_16sp"
            android:layout_marginBottom="@dimen/margin_36sp"
            android:text="@string/sloganTextView"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shoeTypesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/shoeTypesTextView"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exploreButton"
            android:text="@string/exploreButton"
            style="@style/whiteButton" />


    </LinearLayout>


</layout>