<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--I used LinearLayout, orientation vertical, to align all children in a single direction, vertically-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/instructionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_16sp"
            android:layout_marginTop="@dimen/margin_36sp"
            android:layout_marginEnd="@dimen/margin_16sp"
            android:gravity="center_horizontal"
            android:text="@string/instructions"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_36sp" />

        <TextView
            android:id="@+id/urgeTextView"
            android:text="@string/urgeTextView"
            style="@style/urgeStyle" />

        <Button
            android:id="@+id/seeDealsButton"
            style="@style/whiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_36sp"
            android:text="@string/seeDealsButton" />
    </LinearLayout>

</layout>